# desarrollo-guiado-por-ia-python

./: .gitignore  AGENTS.md  EJERCICIO.md  Makefile  README.md
.ai/: permission-profiles.yaml
.ai/agents/: backend-architect.md  backend-architect.yaml  backend-dev.md  backend-dev.yaml  debater.md  debater.yaml  executor.md  executor.yaml  frontend-architect.yaml  frontend-dev.yaml  planner.md  planner.yaml  reviewer.yaml
.ai/agents/prompts/: backend-architect.md  backend-dev.md  debater.md  executor.md  frontend-architect.md  frontend-dev.md  planner.md  reviewer.md
.ai/commands/: discovery.md  execute.md  plan.md  review.md
.ai/hooks/: pre-commit
.ai/skills/commit/: SKILL.md
.ai/skills/tdd/: SKILL.md
.ai/skills/tdd/references/: red-green-refactor.md
backend/: AGENTS.md  Makefile  main.py  pyproject.toml
backend/docs/: reglas.md
backend/tests/: test_main.py
docs/: commits.md
frontend/: AGENTS.md
frontend/src/app/: app.component.ts
scripts/: generate-agents  sync-ai.ps1  sync-ai.sh
